// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Nav 1`] = `
<div>
  <div
    class="cxd-Nav w-md"
  >
    <ul
      class="cxd-Nav-Menu cxd-Nav-Menu-root cxd-Nav-Menu-inline cxd-Nav-Menu-ltr cxd-Nav-Menu-light cxd-Nav-Menu-expand-before"
      data-menu-list="true"
      dir="ltr"
      role="menu"
      tabindex="0"
    >
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 0;"
      >
        <li
          aria-disabled="false"
          class="cxd-Nav-Menu-item cxd-Nav-Menu-item-selected"
          data-menu-id="rc-menu-uuid-test-1"
          role="menuitem"
          style="padding-left: 16px;"
          tabindex="-1"
        >
          <div
            class="cxd-Nav-Menu-item-wrap"
          >
            <div
              class="cxd-Badge"
            >
              <a
                class="cxd-Nav-Menu-item-link"
                data-depth="1"
                data-id="1"
                title="Nav 1"
              >
                <i
                  class="cxd-Nav-Menu-item-icon"
                >
                  <img
                    class="cxd-Icon mr-2"
                    src="https://suda.cdn.bcebos.com/images%2F2021-01%2Fdiamond.svg"
                  />
                </i>
                <span
                  class="cxd-Nav-Menu-item-label"
                  title="Nav 1"
                >
                  Nav 1
                </span>
              </a>
            </div>
          </div>
        </li>
      </ul>
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 1;"
      >
        <li
          aria-disabled="false"
          class="cxd-Nav-Menu-item"
          data-menu-id="rc-menu-uuid-test-2"
          role="menuitem"
          style="padding-left: 16px;"
          tabindex="-1"
        >
          <div
            class="cxd-Nav-Menu-item-wrap"
          >
            <div
              class="cxd-Badge"
            >
              <a
                class="cxd-Nav-Menu-item-link"
                data-depth="1"
                data-id="1"
                title="Nav 2"
              >
                <span
                  class="cxd-Nav-Menu-item-label"
                  title="Nav 2"
                >
                  Nav 2
                </span>
              </a>
              <div
                class="cxd-Badge-ribbon-out cxd-Badge-ribbon-out--top-left"
                style="width: 21.970562748477143px; height: 21.970562748477143px;"
              >
                <span
                  class="cxd-Badge-ribbon cxd-Badge-ribbon--top-left cxd-Badge--danger"
                  style="height: 12px; line-height: 12px; font-size: 12px;"
                >
                  HOT
                </span>
              </div>
            </div>
          </div>
        </li>
      </ul>
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 2;"
      >
        <li
          aria-disabled="false"
          class="cxd-Nav-Menu-item"
          data-menu-id="rc-menu-uuid-test-3"
          role="menuitem"
          style="padding-left: 16px;"
          tabindex="-1"
        >
          <div
            class="cxd-Nav-Menu-item-wrap"
          >
            <div
              class="cxd-Badge"
            >
              <a
                class="cxd-Nav-Menu-item-link"
                data-depth="1"
                data-id="2"
                title="Nav 3"
              >
                <span
                  class="cxd-Nav-Menu-item-label"
                  title="Nav 3"
                >
                  Nav 3
                </span>
              </a>
              <div
                class="cxd-Badge-ribbon-out cxd-Badge-ribbon-out--top-left"
                style="width: 21.970562748477143px; height: 21.970562748477143px;"
              >
                <span
                  class="cxd-Badge-ribbon cxd-Badge-ribbon--top-left cxd-Badge--success"
                  style="height: 12px; line-height: 12px; font-size: 12px;"
                >
                  SUC
                </span>
              </div>
            </div>
          </div>
        </li>
      </ul>
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 3;"
      >
        <li
          aria-disabled="false"
          class="cxd-Nav-Menu-item"
          data-menu-id="rc-menu-uuid-test-4"
          role="menuitem"
          style="padding-left: 16px;"
          tabindex="-1"
        >
          <div
            class="cxd-Nav-Menu-item-wrap"
          >
            <div
              class="cxd-Badge"
            >
              <a
                class="cxd-Nav-Menu-item-link"
                data-depth="1"
                data-id="3"
                title="外部地址"
              >
                <span
                  class="cxd-Nav-Menu-item-label"
                  title="外部地址"
                >
                  外部地址
                </span>
              </a>
            </div>
          </div>
        </li>
      </ul>
    </ul>
    <div
      aria-hidden="true"
      style="display: none;"
    >
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 0;"
      />
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 1;"
      />
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 2;"
      />
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 3;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Nav with Dialog 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              点击弹框
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Nav with defer 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Nav"
          >
            <ul
              class="cxd-Nav-Menu cxd-Nav-Menu-root cxd-Nav-Menu-inline cxd-Nav-Menu-ltr cxd-Nav-Menu-light cxd-Nav-Menu-expand-before"
              data-menu-list="true"
              dir="ltr"
              role="menu"
              tabindex="0"
            >
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              >
                <li
                  aria-disabled="false"
                  class="cxd-Nav-Menu-item"
                  data-menu-id="rc-menu-uuid-test-1"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="cxd-Nav-Menu-item-wrap"
                  >
                    <a
                      class="cxd-Nav-Menu-item-link"
                      data-depth="1"
                      data-id="1"
                      title="Nav 1"
                    >
                      <i
                        class="cxd-Nav-Menu-item-icon"
                      >
                        <i
                          class="fa fa-user mr-2 fa fa-user"
                        />
                      </i>
                      <span
                        class="cxd-Nav-Menu-item-label"
                        title="Nav 1"
                      >
                        Nav 1
                      </span>
                    </a>
                  </div>
                </li>
              </ul>
              <li
                class="cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-inline cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-open"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-test-2-popup"
                  aria-expanded="true"
                  aria-haspopup="true"
                  class="cxd-Nav-Menu-submenu-title"
                  data-menu-id="rc-menu-uuid-test-2"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="cxd-Nav-Menu-item-wrap"
                  >
                    <a
                      class="cxd-Nav-Menu-item-link"
                      data-depth="1"
                      data-id="2"
                    >
                      <span
                        class="cxd-Nav-Menu-item-label cxd-Nav-Menu-item-label-subTitle"
                        title="Nav 2"
                      >
                        Nav 2
                      </span>
                    </a>
                  </div>
                  <span
                    class="cxd-Nav-Menu-submenu-arrow"
                  >
                    <icon-mock
                      classname="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
                <ul
                  class="cxd-Nav-Menu cxd-Nav-Menu-sub cxd-Nav-Menu-inline"
                  data-menu-list="true"
                  id="rc-menu-uuid-test-2-popup"
                  role="menu"
                >
                  <li
                    class="cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-inline cxd-Nav-Menu-submenu"
                    role="none"
                  >
                    <div
                      aria-controls="rc-menu-uuid-test-3-popup"
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="cxd-Nav-Menu-submenu-title"
                      data-menu-id="rc-menu-uuid-test-3"
                      role="menuitem"
                      style="padding-left: 32px;"
                      tabindex="-1"
                    >
                      <div
                        class="cxd-Nav-Menu-item-wrap"
                      >
                        <a
                          class="cxd-Nav-Menu-item-link"
                          data-depth="2"
                          data-id="2.1"
                        >
                          <span
                            class="cxd-Nav-Menu-item-label cxd-Nav-Menu-item-label-subTitle"
                            title="Nav 2-1"
                          >
                            Nav 2-1
                          </span>
                        </a>
                      </div>
                      <span
                        class="cxd-Nav-Menu-submenu-arrow"
                      >
                        <icon-mock
                          classname="icon icon-right-arrow-bold"
                          icon="right-arrow-bold"
                        />
                      </span>
                    </div>
                  </li>
                  <ul
                    class="cxd-Nav-Menu-item-tooltip-wrap"
                    style="order: 1;"
                  >
                    <li
                      aria-disabled="false"
                      class="cxd-Nav-Menu-item"
                      data-menu-id="rc-menu-uuid-test-5"
                      role="menuitem"
                      style="padding-left: 32px;"
                      tabindex="-1"
                    >
                      <div
                        class="cxd-Nav-Menu-item-wrap"
                      >
                        <a
                          class="cxd-Nav-Menu-item-link"
                          data-depth="2"
                          data-id="2.2"
                          title="Nav 2-2"
                        >
                          <span
                            class="cxd-Nav-Menu-item-label"
                            title="Nav 2-2"
                          >
                            Nav 2-2
                          </span>
                        </a>
                      </div>
                    </li>
                  </ul>
                </ul>
              </li>
              <li
                class="cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-inline cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-open"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-test-6-popup"
                  aria-disabled="false"
                  aria-expanded="true"
                  aria-haspopup="true"
                  class="cxd-Nav-Menu-submenu-title"
                  data-menu-id="rc-menu-uuid-test-6"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="cxd-Nav-Menu-item-wrap"
                  >
                    <a
                      class="cxd-Nav-Menu-item-link"
                      data-depth="1"
                      data-id="3"
                    >
                      <span
                        class="cxd-Nav-Menu-item-label cxd-Nav-Menu-item-label-subTitle"
                        title="Nav 3"
                      >
                        Nav 3
                      </span>
                    </a>
                  </div>
                  <span
                    class="cxd-Nav-Menu-submenu-arrow"
                  >
                    <icon-mock
                      classname="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
                <ul
                  class="cxd-Nav-Menu cxd-Nav-Menu-sub cxd-Nav-Menu-inline"
                  data-menu-list="true"
                  id="rc-menu-uuid-test-6-popup"
                  role="menu"
                >
                  <ul
                    class="cxd-Nav-Menu-item-tooltip-wrap"
                    style="order: 0;"
                  >
                    <li
                      aria-disabled="false"
                      class="cxd-Nav-Menu-item"
                      data-menu-id="rc-menu-uuid-test-7"
                      role="menuitem"
                      style="padding-left: 32px;"
                      tabindex="-1"
                    >
                      <div
                        class="cxd-Nav-Menu-item-wrap"
                      >
                        <a
                          class="cxd-Nav-Menu-item-link"
                          data-depth="2"
                          data-id="3.1"
                          title="Nav 3-1"
                        >
                          <span
                            class="cxd-Nav-Menu-item-label"
                            title="Nav 3-1"
                          >
                            Nav 3-1
                          </span>
                        </a>
                      </div>
                    </li>
                  </ul>
                  <ul
                    class="cxd-Nav-Menu-item-tooltip-wrap"
                    style="order: 1;"
                  >
                    <li
                      aria-disabled="false"
                      class="cxd-Nav-Menu-item"
                      data-menu-id="rc-menu-uuid-test-8"
                      role="menuitem"
                      style="padding-left: 32px;"
                      tabindex="-1"
                    >
                      <div
                        class="cxd-Nav-Menu-item-wrap"
                      >
                        <a
                          class="cxd-Nav-Menu-item-link"
                          data-depth="2"
                          data-id="3.2"
                          title="Nav 3-2"
                        >
                          <span
                            class="cxd-Nav-Menu-item-label"
                            title="Nav 3-2"
                          >
                            Nav 3-2
                          </span>
                        </a>
                      </div>
                    </li>
                  </ul>
                </ul>
              </li>
            </ul>
            <div
              aria-hidden="true"
              style="display: none;"
            >
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 1;"
              />
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 1;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Nav with icons 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Nav"
          >
            <ul
              class="cxd-Nav-Menu cxd-Nav-Menu-root cxd-Nav-Menu-inline cxd-Nav-Menu-ltr cxd-Nav-Menu-light cxd-Nav-Menu-expand-before"
              data-menu-list="true"
              dir="ltr"
              role="menu"
              tabindex="0"
            >
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              >
                <li
                  aria-disabled="false"
                  class="cxd-Nav-Menu-item"
                  data-menu-id="rc-menu-uuid-test-1"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="cxd-Nav-Menu-item-wrap"
                  >
                    <a
                      class="cxd-Nav-Menu-item-link"
                      data-depth="1"
                      data-id="1"
                      title="Nav 1"
                    >
                      <i
                        class="cxd-Nav-Menu-item-icon"
                      >
                        <i
                          class="fa fa-user mr-2 fa fa-user"
                        />
                      </i>
                      <span
                        class="cxd-Nav-Menu-item-label"
                        title="Nav 1"
                      >
                        Nav 1
                      </span>
                    </a>
                  </div>
                </li>
              </ul>
              <li
                class="cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-inline cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-open"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-test-2-popup"
                  aria-expanded="true"
                  aria-haspopup="true"
                  class="cxd-Nav-Menu-submenu-title"
                  data-menu-id="rc-menu-uuid-test-2"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="cxd-Nav-Menu-item-wrap"
                  >
                    <a
                      class="cxd-Nav-Menu-item-link"
                      data-depth="1"
                      data-id="2"
                    >
                      <span
                        class="cxd-Nav-Menu-item-label cxd-Nav-Menu-item-label-subTitle"
                        title="Nav 2"
                      >
                        Nav 2
                      </span>
                    </a>
                  </div>
                  <span
                    class="cxd-Nav-Menu-submenu-arrow"
                  >
                    <icon-mock
                      classname="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
                <ul
                  class="cxd-Nav-Menu cxd-Nav-Menu-sub cxd-Nav-Menu-inline"
                  data-menu-list="true"
                  id="rc-menu-uuid-test-2-popup"
                  role="menu"
                >
                  <li
                    class="cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-inline cxd-Nav-Menu-submenu"
                    role="none"
                  >
                    <div
                      aria-controls="rc-menu-uuid-test-3-popup"
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="cxd-Nav-Menu-submenu-title"
                      data-menu-id="rc-menu-uuid-test-3"
                      role="menuitem"
                      style="padding-left: 32px;"
                      tabindex="-1"
                    >
                      <div
                        class="cxd-Nav-Menu-item-wrap"
                      >
                        <a
                          class="cxd-Nav-Menu-item-link"
                          data-depth="2"
                          data-id="2.1"
                        >
                          <i
                            class="cxd-Nav-Menu-item-icon"
                          >
                            <icon-mock
                              classname="mr-2 icon-star"
                              icon="star"
                            />
                            <icon-mock
                              classname="mr-2 icon-search"
                              icon="search"
                            />
                          </i>
                          <span
                            class="cxd-Nav-Menu-item-label cxd-Nav-Menu-item-label-subTitle"
                            title="Nav 2-1"
                          >
                            Nav 2-1
                          </span>
                          <i
                            class="cxd-Nav-Menu-item-icon-after"
                          >
                            <img
                              class="cxd-Icon ml-2"
                              src="https://suda.cdn.bcebos.com/images%2F2021-01%2Fdiamond.svg"
                            />
                          </i>
                        </a>
                      </div>
                      <span
                        class="cxd-Nav-Menu-submenu-arrow"
                      >
                        <icon-mock
                          classname="icon icon-right-arrow-bold"
                          icon="right-arrow-bold"
                        />
                      </span>
                    </div>
                  </li>
                </ul>
              </li>
            </ul>
            <div
              aria-hidden="true"
              style="display: none;"
            >
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Nav with itemActions 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Nav w-md"
          >
            <ul
              class="cxd-Nav-Menu cxd-Nav-Menu-root cxd-Nav-Menu-inline cxd-Nav-Menu-ltr cxd-Nav-Menu-light cxd-Nav-Menu-disabled cxd-Nav-Menu-expand-before"
              data-menu-list="true"
              dir="ltr"
              role="menu"
              tabindex="0"
            >
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              >
                <li
                  aria-disabled="true"
                  class="cxd-Nav-Menu-item cxd-Nav-Menu-item-disabled"
                  data-menu-id="rc-menu-uuid-test-1"
                  role="menuitem"
                  style="padding-left: 16px;"
                >
                  <div
                    class="cxd-Nav-Menu-item-wrap"
                  >
                    <a
                      class="cxd-Nav-Menu-item-link"
                      data-depth="1"
                      data-id="1"
                      title="Nav 1"
                    >
                      <i
                        class="cxd-Nav-Menu-item-icon"
                      >
                        <i
                          class="fa fa-user mr-2 fa fa-user"
                        />
                      </i>
                      <span
                        class="cxd-Nav-Menu-item-label"
                        title="Nav 1"
                      >
                        Nav 1
                      </span>
                    </a>
                    <div
                      class="cxd-Nav-Menu-item-extra"
                    >
                      <i
                        class="cloud fa fa-cloud"
                      />
                      <div
                        class="cxd-DropDown "
                      >
                        <button
                          class="cxd-Button cxd-Button--link cxd-Button--size-default"
                        >
                          <i
                            class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
              <li
                class="cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-inline cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-open cxd-Nav-Menu-submenu-disabled"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-test-2-popup"
                  aria-disabled="true"
                  aria-expanded="true"
                  aria-haspopup="true"
                  class="cxd-Nav-Menu-submenu-title"
                  data-menu-id="rc-menu-uuid-test-2"
                  role="menuitem"
                  style="padding-left: 16px;"
                >
                  <div
                    class="cxd-Nav-Menu-item-wrap"
                  >
                    <a
                      class="cxd-Nav-Menu-item-link"
                      data-depth="1"
                      data-id="2"
                    >
                      <span
                        class="cxd-Nav-Menu-item-label cxd-Nav-Menu-item-label-subTitle"
                        title="Nav 2"
                      >
                        Nav 2
                      </span>
                    </a>
                    <div
                      class="cxd-Nav-Menu-item-extra"
                    >
                      <div
                        class="cxd-DropDown "
                      >
                        <button
                          class="cxd-Button cxd-Button--link cxd-Button--size-default"
                        >
                          <i
                            class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                  <span
                    class="cxd-Nav-Menu-submenu-arrow"
                  >
                    <icon-mock
                      classname="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
                <ul
                  class="cxd-Nav-Menu cxd-Nav-Menu-sub cxd-Nav-Menu-inline"
                  data-menu-list="true"
                  id="rc-menu-uuid-test-2-popup"
                  role="menu"
                >
                  <li
                    class="cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-inline cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-disabled"
                    role="none"
                  >
                    <div
                      aria-controls="rc-menu-uuid-test-3-popup"
                      aria-disabled="true"
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="cxd-Nav-Menu-submenu-title"
                      data-menu-id="rc-menu-uuid-test-3"
                      role="menuitem"
                      style="padding-left: 32px;"
                    >
                      <div
                        class="cxd-Nav-Menu-item-wrap"
                      >
                        <a
                          class="cxd-Nav-Menu-item-link"
                          data-depth="2"
                          data-id="2.1"
                        >
                          <span
                            class="cxd-Nav-Menu-item-label cxd-Nav-Menu-item-label-subTitle"
                            title="Nav 2-1"
                          >
                            Nav 2-1
                          </span>
                        </a>
                        <div
                          class="cxd-Nav-Menu-item-extra"
                        >
                          <div
                            class="cxd-DropDown "
                          >
                            <button
                              class="cxd-Button cxd-Button--link cxd-Button--size-default"
                            >
                              <i
                                class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                              />
                            </button>
                          </div>
                        </div>
                      </div>
                      <span
                        class="cxd-Nav-Menu-submenu-arrow"
                      >
                        <icon-mock
                          classname="icon icon-right-arrow-bold"
                          icon="right-arrow-bold"
                        />
                      </span>
                    </div>
                  </li>
                  <ul
                    class="cxd-Nav-Menu-item-tooltip-wrap"
                    style="order: 1;"
                  >
                    <li
                      aria-disabled="true"
                      class="cxd-Nav-Menu-item cxd-Nav-Menu-item-disabled"
                      data-menu-id="rc-menu-uuid-test-5"
                      role="menuitem"
                      style="padding-left: 32px;"
                    >
                      <div
                        class="cxd-Nav-Menu-item-wrap"
                      >
                        <a
                          class="cxd-Nav-Menu-item-link"
                          data-depth="2"
                          data-id="2.2"
                          title="Nav 2-2"
                        >
                          <span
                            class="cxd-Nav-Menu-item-label"
                            title="Nav 2-2"
                          >
                            Nav 2-2
                          </span>
                        </a>
                        <div
                          class="cxd-Nav-Menu-item-extra"
                        >
                          <div
                            class="cxd-DropDown "
                          >
                            <button
                              class="cxd-Button cxd-Button--link cxd-Button--size-default"
                            >
                              <i
                                class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                              />
                            </button>
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </ul>
              </li>
              <li
                class="cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-inline cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-disabled"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-test-6-popup"
                  aria-disabled="true"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="cxd-Nav-Menu-submenu-title"
                  data-menu-id="rc-menu-uuid-test-6"
                  role="menuitem"
                  style="padding-left: 16px;"
                >
                  <div
                    class="cxd-Nav-Menu-item-wrap"
                  >
                    <a
                      class="cxd-Nav-Menu-item-link"
                      data-depth="1"
                      data-id="3"
                    >
                      <span
                        class="cxd-Nav-Menu-item-label cxd-Nav-Menu-item-label-subTitle"
                        title="Nav 3"
                      >
                        Nav 3
                      </span>
                    </a>
                    <div
                      class="cxd-Nav-Menu-item-extra"
                    >
                      <div
                        class="cxd-DropDown "
                      >
                        <button
                          class="cxd-Button cxd-Button--link cxd-Button--size-default"
                        >
                          <i
                            class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                  <span
                    class="cxd-Nav-Menu-submenu-arrow"
                  >
                    <icon-mock
                      classname="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
              </li>
            </ul>
            <div
              aria-hidden="true"
              style="display: none;"
            >
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 1;"
              />
            </div>
            <div
              class="cxd-Spinner-overlay in"
            />
            <div
              class="cxd-Spinner cxd-Spinner--overlay in"
              data-testid="spinner"
            >
              <div
                class="cxd-Spinner-icon cxd-Spinner-icon--default"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Nav with itemActions 2`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Nav w-md"
          >
            <ul
              class="cxd-Nav-Menu cxd-Nav-Menu-root cxd-Nav-Menu-inline cxd-Nav-Menu-ltr cxd-Nav-Menu-light cxd-Nav-Menu-expand-before"
              data-menu-list="true"
              dir="ltr"
              role="menu"
              tabindex="0"
            >
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              >
                <li
                  aria-disabled="false"
                  class="cxd-Nav-Menu-item"
                  data-menu-id="rc-menu-uuid-test-1"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="cxd-Nav-Menu-item-wrap"
                  >
                    <a
                      class="cxd-Nav-Menu-item-link"
                      data-depth="1"
                      data-id="1"
                      title="Nav 1"
                    >
                      <span
                        class="cxd-Nav-Menu-item-dragBar"
                        draggable="true"
                      >
                        <icon-mock />
                      </span>
                      <i
                        class="cxd-Nav-Menu-item-icon"
                      >
                        <i
                          class="fa fa-user mr-2 fa fa-user"
                        />
                      </i>
                      <span
                        class="cxd-Nav-Menu-item-label"
                        title="Nav 1"
                      >
                        Nav 1
                      </span>
                    </a>
                    <div
                      class="cxd-Nav-Menu-item-extra"
                    >
                      <i
                        class="cloud fa fa-cloud"
                      />
                      <div
                        class="cxd-DropDown  is-opened"
                      >
                        <button
                          class="cxd-Button cxd-Button--link cxd-Button--size-default"
                        >
                          <i
                            class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
              <li
                class="cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-inline cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-open"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-test-2-popup"
                  aria-expanded="true"
                  aria-haspopup="true"
                  class="cxd-Nav-Menu-submenu-title"
                  data-menu-id="rc-menu-uuid-test-2"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="cxd-Nav-Menu-item-wrap"
                  >
                    <a
                      class="cxd-Nav-Menu-item-link"
                      data-depth="1"
                      data-id="2"
                    >
                      <span
                        class="cxd-Nav-Menu-item-dragBar"
                        draggable="true"
                      >
                        <icon-mock />
                      </span>
                      <span
                        class="cxd-Nav-Menu-item-label cxd-Nav-Menu-item-label-subTitle"
                        title="Nav 2"
                      >
                        Nav 2
                      </span>
                    </a>
                    <div
                      class="cxd-Nav-Menu-item-extra"
                    >
                      <div
                        class="cxd-DropDown "
                      >
                        <button
                          class="cxd-Button cxd-Button--link cxd-Button--size-default"
                        >
                          <i
                            class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                  <span
                    class="cxd-Nav-Menu-submenu-arrow"
                  >
                    <icon-mock
                      classname="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
                <ul
                  class="cxd-Nav-Menu cxd-Nav-Menu-sub cxd-Nav-Menu-inline"
                  data-menu-list="true"
                  id="rc-menu-uuid-test-2-popup"
                  role="menu"
                >
                  <li
                    class="cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-inline cxd-Nav-Menu-submenu"
                    role="none"
                  >
                    <div
                      aria-controls="rc-menu-uuid-test-3-popup"
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="cxd-Nav-Menu-submenu-title"
                      data-menu-id="rc-menu-uuid-test-3"
                      role="menuitem"
                      style="padding-left: 32px;"
                      tabindex="-1"
                    >
                      <div
                        class="cxd-Nav-Menu-item-wrap"
                      >
                        <a
                          class="cxd-Nav-Menu-item-link"
                          data-depth="2"
                          data-id="2.1"
                        >
                          <span
                            class="cxd-Nav-Menu-item-dragBar"
                            draggable="true"
                          >
                            <icon-mock />
                          </span>
                          <span
                            class="cxd-Nav-Menu-item-label cxd-Nav-Menu-item-label-subTitle"
                            title="Nav 2-1"
                          >
                            Nav 2-1
                          </span>
                        </a>
                        <div
                          class="cxd-Nav-Menu-item-extra"
                        >
                          <div
                            class="cxd-DropDown "
                          >
                            <button
                              class="cxd-Button cxd-Button--link cxd-Button--size-default"
                            >
                              <i
                                class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                              />
                            </button>
                          </div>
                        </div>
                      </div>
                      <span
                        class="cxd-Nav-Menu-submenu-arrow"
                      >
                        <icon-mock
                          classname="icon icon-right-arrow-bold"
                          icon="right-arrow-bold"
                        />
                      </span>
                    </div>
                  </li>
                  <ul
                    class="cxd-Nav-Menu-item-tooltip-wrap"
                    style="order: 1;"
                  >
                    <li
                      aria-disabled="false"
                      class="cxd-Nav-Menu-item"
                      data-menu-id="rc-menu-uuid-test-5"
                      role="menuitem"
                      style="padding-left: 32px;"
                      tabindex="-1"
                    >
                      <div
                        class="cxd-Nav-Menu-item-wrap"
                      >
                        <a
                          class="cxd-Nav-Menu-item-link"
                          data-depth="2"
                          data-id="2.2"
                          title="Nav 2-2"
                        >
                          <span
                            class="cxd-Nav-Menu-item-dragBar"
                            draggable="true"
                          >
                            <icon-mock />
                          </span>
                          <span
                            class="cxd-Nav-Menu-item-label"
                            title="Nav 2-2"
                          >
                            Nav 2-2
                          </span>
                        </a>
                        <div
                          class="cxd-Nav-Menu-item-extra"
                        >
                          <div
                            class="cxd-DropDown "
                          >
                            <button
                              class="cxd-Button cxd-Button--link cxd-Button--size-default"
                            >
                              <i
                                class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                              />
                            </button>
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </ul>
              </li>
              <li
                class="cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-inline cxd-Nav-Menu-submenu"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-test-6-popup"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="cxd-Nav-Menu-submenu-title"
                  data-menu-id="rc-menu-uuid-test-6"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="cxd-Nav-Menu-item-wrap"
                  >
                    <a
                      class="cxd-Nav-Menu-item-link"
                      data-depth="1"
                      data-id="3"
                    >
                      <span
                        class="cxd-Nav-Menu-item-dragBar"
                        draggable="true"
                      >
                        <icon-mock />
                      </span>
                      <span
                        class="cxd-Nav-Menu-item-label cxd-Nav-Menu-item-label-subTitle"
                        title="Nav 3"
                      >
                        Nav 3
                      </span>
                    </a>
                    <div
                      class="cxd-Nav-Menu-item-extra"
                    >
                      <div
                        class="cxd-DropDown "
                      >
                        <button
                          class="cxd-Button cxd-Button--link cxd-Button--size-default"
                        >
                          <i
                            class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                  <span
                    class="cxd-Nav-Menu-submenu-arrow"
                  >
                    <icon-mock
                      classname="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
              </li>
            </ul>
            <div
              aria-hidden="true"
              style="display: none;"
            >
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 1;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Nav with multi-level 1`] = `
<div>
  <div
    class="cxd-Nav w-md"
  >
    <ul
      class="cxd-Nav-Menu cxd-Nav-Menu-root cxd-Nav-Menu-inline cxd-Nav-Menu-ltr cxd-Nav-Menu-light cxd-Nav-Menu-expand-before"
      data-menu-list="true"
      dir="ltr"
      role="menu"
      tabindex="0"
    >
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 0;"
      >
        <li
          aria-disabled="false"
          class="cxd-Nav-Menu-item cxd-Nav-Menu-item-selected"
          data-menu-id="rc-menu-uuid-test-1"
          role="menuitem"
          style="padding-left: 16px;"
          tabindex="-1"
        >
          <div
            class="cxd-Nav-Menu-item-wrap"
          >
            <a
              class="cxd-Nav-Menu-item-link"
              data-depth="1"
              data-id="1"
              title="Nav 1"
            >
              <i
                class="cxd-Nav-Menu-item-icon"
              >
                <i
                  class="fa fa-user mr-2 fa fa-user"
                />
              </i>
              <span
                class="cxd-Nav-Menu-item-label"
                title="Nav 1"
              >
                Nav 1
              </span>
            </a>
          </div>
        </li>
      </ul>
      <li
        class="cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-inline cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-open"
        role="none"
      >
        <div
          aria-controls="rc-menu-uuid-test-2-popup"
          aria-expanded="true"
          aria-haspopup="true"
          class="cxd-Nav-Menu-submenu-title"
          data-menu-id="rc-menu-uuid-test-2"
          role="menuitem"
          style="padding-left: 16px;"
          tabindex="-1"
        >
          <div
            class="cxd-Nav-Menu-item-wrap"
          >
            <a
              class="cxd-Nav-Menu-item-link"
              data-depth="1"
              data-id="2"
            >
              <span
                class="cxd-Nav-Menu-item-label cxd-Nav-Menu-item-label-subTitle"
                title="Nav 2"
              >
                Nav 2
              </span>
            </a>
          </div>
          <span
            class="cxd-Nav-Menu-submenu-arrow"
          >
            <icon-mock
              classname="icon icon-right-arrow-bold"
              icon="right-arrow-bold"
            />
          </span>
        </div>
        <ul
          class="cxd-Nav-Menu cxd-Nav-Menu-sub cxd-Nav-Menu-inline"
          data-menu-list="true"
          id="rc-menu-uuid-test-2-popup"
          role="menu"
        >
          <li
            class="cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-inline cxd-Nav-Menu-submenu"
            role="none"
          >
            <div
              aria-controls="rc-menu-uuid-test-3-popup"
              aria-expanded="false"
              aria-haspopup="true"
              class="cxd-Nav-Menu-submenu-title"
              data-menu-id="rc-menu-uuid-test-3"
              role="menuitem"
              style="padding-left: 32px;"
              tabindex="-1"
            >
              <div
                class="cxd-Nav-Menu-item-wrap"
              >
                <a
                  class="cxd-Nav-Menu-item-link"
                  data-depth="2"
                  data-id="2.1"
                >
                  <span
                    class="cxd-Nav-Menu-item-label cxd-Nav-Menu-item-label-subTitle"
                    title="Nav 2-1"
                  >
                    Nav 2-1
                  </span>
                </a>
              </div>
              <span
                class="cxd-Nav-Menu-submenu-arrow"
              >
                <icon-mock
                  classname="icon icon-right-arrow-bold"
                  icon="right-arrow-bold"
                />
              </span>
            </div>
          </li>
          <ul
            class="cxd-Nav-Menu-item-tooltip-wrap"
            style="order: 1;"
          >
            <li
              aria-disabled="false"
              class="cxd-Nav-Menu-item"
              data-menu-id="rc-menu-uuid-test-5"
              role="menuitem"
              style="padding-left: 32px;"
              tabindex="-1"
            >
              <div
                class="cxd-Nav-Menu-item-wrap"
              >
                <a
                  class="cxd-Nav-Menu-item-link"
                  data-depth="2"
                  data-id="2.2"
                  title="Nav 2-2"
                >
                  <span
                    class="cxd-Nav-Menu-item-label"
                    title="Nav 2-2"
                  >
                    Nav 2-2
                  </span>
                </a>
              </div>
            </li>
          </ul>
        </ul>
      </li>
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 2;"
      >
        <li
          aria-disabled="false"
          class="cxd-Nav-Menu-item"
          data-menu-id="rc-menu-uuid-test-6"
          role="menuitem"
          style="padding-left: 16px;"
          tabindex="-1"
        >
          <div
            class="cxd-Nav-Menu-item-wrap"
          >
            <a
              class="cxd-Nav-Menu-item-link"
              data-depth="1"
              data-id="3"
              title="Nav 3"
            >
              <span
                class="cxd-Nav-Menu-item-label"
                title="Nav 3"
              >
                Nav 3
              </span>
            </a>
          </div>
        </li>
      </ul>
    </ul>
    <div
      aria-hidden="true"
      style="display: none;"
    >
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 0;"
      />
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 0;"
      />
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 1;"
      />
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 2;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Nav with overflow 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Nav cxd-Nav-horizontal"
          >
            <section
              class="cxd-Nav-Menu-overflow cxd-Nav-Menu cxd-Nav-Menu-root cxd-Nav-Menu-horizontal cxd-Nav-Menu-ltr cxd-Nav-Menu-light"
              data-menu-list="true"
              dir="ltr"
              role="menu"
              style="color: red;"
              tabindex="0"
            >
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
              >
                <li
                  aria-disabled="false"
                  class="cxd-Nav-Menu-overflow-item cxd-Nav-Menu-item"
                  data-menu-id="rc-menu-uuid-test-1"
                  role="menuitem"
                  style="opacity: 1;"
                  tabindex="-1"
                >
                  <div
                    class="cxd-Nav-Menu-item-wrap"
                  >
                    <a
                      class="cxd-Nav-Menu-item-link"
                      data-depth="1"
                      data-id="1"
                      title="Nav 1"
                    >
                      <span
                        class="cxd-Nav-Menu-item-label"
                        title="Nav 1"
                      >
                        Nav 1
                      </span>
                    </a>
                  </div>
                </li>
              </ul>
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
              >
                <li
                  aria-disabled="false"
                  class="cxd-Nav-Menu-overflow-item cxd-Nav-Menu-item"
                  role="menuitem"
                  style="opacity: 1;"
                  tabindex="-1"
                >
                  <div
                    class="cxd-Nav-Menu-item-wrap"
                  >
                    <a
                      class="cxd-Nav-Menu-item-link"
                      data-depth="1"
                      data-id="2"
                      title="Nav 2"
                    >
                      <span
                        class="cxd-Nav-Menu-item-label"
                        title="Nav 2"
                      >
                        Nav 2
                      </span>
                    </a>
                  </div>
                </li>
              </ul>
              <li
                class="cxd-Nav-Menu-overflow-item cxd-Nav-Menu-overflow-item-rest cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-horizontal"
                role="none"
                style="opacity: 1;"
              >
                <div
                  aria-controls="rc-menu-uuid-test-rc-menu-more-popup"
                  aria-disabled="false"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="cxd-Nav-Menu-submenu-title"
                  data-menu-id="rc-menu-uuid-test-rc-menu-more"
                  role="menuitem"
                  tabindex="-1"
                >
                  <span
                    class="cxd-Nav-Menu-item-icon cxd-Nav-Menu-overflowedIcon thisisoverflowClassName"
                  >
                    <i
                      class="fas fa-angle-double-down icon Nav-item-icon fas fa-angle-double-down"
                    />
                    点击展开
                  </span>
                  <i
                    class="cxd-Nav-Menu-submenu-arrow"
                  />
                </div>
              </li>
            </section>
            <div
              aria-hidden="true"
              style="display: none;"
            >
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
              />
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
              />
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
              />
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
              />
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
              />
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
              />
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
              />
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Nav with source 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Nav"
          >
            <ul
              class="cxd-Nav-Menu cxd-Nav-Menu-root cxd-Nav-Menu-inline cxd-Nav-Menu-ltr cxd-Nav-Menu-light cxd-Nav-Menu-expand-before"
              data-menu-list="true"
              dir="ltr"
              role="menu"
              tabindex="0"
            >
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              >
                <li
                  aria-disabled="false"
                  class="cxd-Nav-Menu-item"
                  data-menu-id="rc-menu-uuid-test-1"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="cxd-Nav-Menu-item-wrap"
                  >
                    <a
                      class="cxd-Nav-Menu-item-link"
                      data-depth="1"
                      data-id="1"
                      title="Nav 1"
                    >
                      <i
                        class="cxd-Nav-Menu-item-icon"
                      >
                        <i
                          class="fa fa-user mr-2 fa fa-user"
                        />
                      </i>
                      <span
                        class="cxd-Nav-Menu-item-label"
                        title="Nav 1"
                      >
                        Nav 1
                      </span>
                    </a>
                  </div>
                </li>
              </ul>
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 1;"
              >
                <li
                  aria-disabled="false"
                  class="cxd-Nav-Menu-item"
                  data-menu-id="rc-menu-uuid-test-2"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="cxd-Nav-Menu-item-wrap"
                  >
                    <a
                      class="cxd-Nav-Menu-item-link"
                      data-depth="1"
                      data-id="2"
                      title="Nav 2"
                    >
                      <span
                        class="cxd-Nav-Menu-item-label"
                        title="Nav 2"
                      >
                        Nav 2
                      </span>
                    </a>
                  </div>
                </li>
              </ul>
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 2;"
              >
                <li
                  aria-disabled="false"
                  class="cxd-Nav-Menu-item"
                  data-menu-id="rc-menu-uuid-test-3"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="cxd-Nav-Menu-item-wrap"
                  >
                    <a
                      class="cxd-Nav-Menu-item-link"
                      data-depth="1"
                      data-id="3"
                      title="Nav 3"
                    >
                      <span
                        class="cxd-Nav-Menu-item-label"
                        title="Nav 3"
                      >
                        Nav 3
                      </span>
                    </a>
                  </div>
                </li>
              </ul>
            </ul>
            <div
              aria-hidden="true"
              style="display: none;"
            >
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 1;"
              />
              <ul
                class="cxd-Nav-Menu-item-tooltip-wrap"
                style="order: 2;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Nav with stacked 1`] = `
<div>
  <div
    class="cxd-Nav cxd-Nav-horizontal"
  >
    <ul
      class="cxd-Nav-Menu-overflow cxd-Nav-Menu cxd-Nav-Menu-root cxd-Nav-Menu-horizontal cxd-Nav-Menu-ltr cxd-Nav-Menu-light"
      data-menu-list="true"
      dir="ltr"
      role="menu"
      tabindex="0"
    >
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 0;"
      >
        <li
          aria-disabled="false"
          class="cxd-Nav-Menu-overflow-item cxd-Nav-Menu-item"
          data-menu-id="rc-menu-uuid-test-1"
          role="menuitem"
          style="opacity: 1; order: 0;"
          tabindex="-1"
        >
          <div
            class="cxd-Nav-Menu-item-wrap"
          >
            <a
              class="cxd-Nav-Menu-item-link"
              data-depth="1"
              data-id="1"
              title="Nav 1"
            >
              <i
                class="cxd-Nav-Menu-item-icon"
              >
                <i
                  class="fa fa-user mr-2 fa fa-user"
                />
              </i>
              <span
                class="cxd-Nav-Menu-item-label"
                title="Nav 1"
              >
                Nav 1
              </span>
            </a>
          </div>
        </li>
      </ul>
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 1;"
      >
        <li
          aria-disabled="false"
          class="cxd-Nav-Menu-overflow-item cxd-Nav-Menu-item"
          role="menuitem"
          style="opacity: 1; order: 1;"
          tabindex="-1"
        >
          <div
            class="cxd-Nav-Menu-item-wrap"
          >
            <a
              class="cxd-Nav-Menu-item-link"
              data-depth="1"
              data-id="2"
              title="Nav 2"
            >
              <span
                class="cxd-Nav-Menu-item-label"
                title="Nav 2"
              >
                Nav 2
              </span>
            </a>
          </div>
        </li>
      </ul>
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 2;"
      >
        <li
          aria-disabled="false"
          class="cxd-Nav-Menu-overflow-item cxd-Nav-Menu-item"
          role="menuitem"
          style="opacity: 1; order: 2;"
          tabindex="-1"
        >
          <div
            class="cxd-Nav-Menu-item-wrap"
          >
            <a
              class="cxd-Nav-Menu-item-link"
              data-depth="1"
              data-id="3"
              title="Nav 3"
            >
              <span
                class="cxd-Nav-Menu-item-label"
                title="Nav 3"
              >
                Nav 3
              </span>
            </a>
          </div>
        </li>
      </ul>
      <li
        aria-hidden="true"
        class="cxd-Nav-Menu-overflow-item cxd-Nav-Menu-overflow-item-rest cxd-Nav-Menu-submenu cxd-Nav-Menu-submenu-horizontal"
        role="none"
        style="opacity: 0; height: 0px; overflow-y: hidden; order: 9007199254740991; pointer-events: none; position: absolute;"
      >
        <div
          aria-controls="rc-menu-uuid-test-rc-menu-more-popup"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          class="cxd-Nav-Menu-submenu-title"
          data-menu-id="rc-menu-uuid-test-rc-menu-more"
          role="menuitem"
          tabindex="-1"
        >
          <i
            class="cxd-Nav-Menu-item-icon cxd-Nav-Menu-overflowedIcon fa fa-ellipsis-h"
          />
          <i
            class="cxd-Nav-Menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
    <div
      aria-hidden="true"
      style="display: none;"
    >
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 0;"
      />
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 1;"
      />
      <ul
        class="cxd-Nav-Menu-item-tooltip-wrap"
        style="order: 2;"
      />
    </div>
  </div>
</div>
`;
